Create new page
educacional

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dany Coutinho</title>
 </head>
 <body>
-    <h1>Título Principal</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum quas perferendis mollitia fugiat minus blanditiis asperiores itaque, iusto recusandae maxime inventore doloremque iure nulla eum excepturi exercitationem facere id cum.</p>
+    <h1>Dany Coutinho</h1>
+    <hr>
+    <p>
+        Sejam bem vindos ao meu mundo virtual!
+    </p>
+    <p>
+        Aqui irei apresentar-vos por secções um pouco sobre o meu precurso, vou deixar-vos escolher o precurso que vocês querem conhecer sobre mim nos links a seguir:
+    </p>
+    Precurso Educacional
+    Precurso Profissional
+    Precurso Pessoal
 </body>
 </html>
