Criação da página "Sobre mim"
Criação da página "Sobre mim"

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p>
         Aqui irei apresentar-vos por secções um pouco sobre o meu precurso, vou deixar-vos escolher o precurso que vocês querem conhecer sobre mim nos links a seguir:
     </p>
-    Precurso Educacional
-    Precurso Profissional
-    Precurso Pessoal
+    <a href="sobremim.html">Quem sou eu?</a>
+    <!-- Precurso Educacional
+    Precurso Profissional -->
 </body>
 </html>
