Creation of new Index's
Page in French and English!

--- a/index.html
+++ b/index.html
@@ -8,42 +8,39 @@
 <body>
     <h1>Dany Coutinho</h1>
     <hr>
+    <a href="indexen.html">English</a>
+    <a href="indexfr.html">Français</a>
     <p>
         Sejam bem vindos ao meu mundo virtual tornado realidade!
     </p>
+    <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
     <p>
-        Aqui irei apresentar-vos um pouco sobre mim.
-    </p>
-    <img src="imgs/EscolhidaLeia01150.png" alt="Foto de Perfil"> <img src="imgs/EscolhidaLeia150.png" alt="">
-    <p>
-        Olá, eu sou o Dany Coutinho, sou técnico de informática e neste momento trabalho na Altran/Capgemini para o Banco Natixis na supervisão e monitorização dos sistemas informáticos de todo o banco Natixis.
+        Olá, eu sou o Dany Coutinho, sou técnico de informática e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos de todo o banco Natixis.
     </p>
     <p>
         Fora do trabalho dedico tempo à minha formação contínua e ao desenvolvimento web e programação!
     </p>
     <hr>
-    <h2>Sobre mim!</h2>    
+    <h2>Sobre mim</h2>
+    Brevemente disponível!
     <ul>
         <li>
-            <a href="sobremim.html">Quem sou eu?</a>
+            <a href="">Percurso Educacional</a>
         </li>
         <li>
-            <a href="">Precurso Educacional</a>
-        </li>
-        <li>
-            <a href="">Precurso Profissional</a>
+            <a href="">Percurso Profissional</a>
         </li>
     </ul>
     <hr>
-    <h2>Como falar comigo?</h2>
+    <h2>Contacte-me!</h2>
     
     <ul>
-        <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Adiciona-me no LinkedIn</li>
-        <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/DanyCoutinho" target="_blank">Dany Coutinho</a> - Acessa ao meu repositório público no GitHub e envolve-te nos meus projetos</li>
-        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Suíço</a>- Segue-me no Instagram</li>
-        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Suíço</a>- Inscreve-te no meu canal YouTube</li>
-        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Segue-me no Twitter</li>
-        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a>- Acompanha-me no Facebook</li>
+        <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Adiciona-me no LinkedIn.</li>
+        <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/DanyCoutinho" target="_blank">Dany Coutinho</a> - Acede ao meu repositório público no GitHub e envolve-te nos meus projetos.</li>
+        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a>- Segue-me no Instagram.</li>
+        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a>- Inscreve-te no meu canal YouTube.</li>
+        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Segue-me no Twitter.</li>
+        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a>- Segue-me no Facebook.</li>
     </ul>
 </body>
 </html>
