--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Dany Coutinho</h1>
     <hr>
-    <a href="indexen.html">English</a>
-    <a href="indexfr.html">Français</a>
+    <button><a href="indexen.html">English</a></button>
+    <button><a href="indexfr.html">Français</a></button>
     <p>
         Sejam bem vindos ao meu mundo virtual tornado realidade!
     </p>
