--- a/indexen.html
+++ b/indexen.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Dany Coutinho</h1>
     <hr>
-    <a href="indexfr.html">Français</a>
-    <a href="index.html">Português</a>
+    <button><a href="indexfr.html">Français</a></button>
+    <button><a href="index.html">Português</a></button>
     <p>
         Welcome to my virtual world come true!
     </p>
