--- a/indexfr.html
+++ b/indexfr.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Dany Coutinho</h1>
     <hr>
-    <a href="indexen.html">English</a>
-    <a href="index.html">Português</a>
+    <button><a href="indexen.html">English</a></button>
+    <button><a href="index.html">Português</a></button>
     <p>
         Bienvenue dans mon monde virtuel devenu réalité!
     </p>
