--- a/indexfr.html
+++ b/indexfr.html
@@ -11,14 +11,14 @@
     <button><a href="indexen.html">English</a></button>
     <button><a href="index.html">Português</a></button>
     <p>
-        Bienvenue dans mon monde virtuel devenu réalité!
+        Bienvenu dans mon monde virtuel devenu réalité!
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
     <p>
-        Bonjour, je suis Dany Coutinho, technicien informatique et je travaille actuellement chez Altran pour la Banque Natixis pour la supervision et la surveillance des systèmes informatiques de toute la Banque Natixis.
+        Bonjour, je m'appel Dany Coutinho, je suis technicien en informatique et je travaille actuellement chez Altran pour la Banque Natixis je supervise et je surveille les systèmes informatiques de toute la Banque Natixis.
     </p>
     <p>
-        En dehors du travail je consacre du temps à ma formation continue et au développement web et programmation!
+        En dehors de mon travail je consacre mon temps à une formation continue et du développement web et programmation!
     </p>
     <hr>
     <h2>Sur moi</h2>  
@@ -35,12 +35,12 @@
     <h2>Contactez-moi!</h2>
     
     <ul>
-        <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Ajoute-moi sur LinkedIn.</li>
+        <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Ajoutez-moi sur LinkedIn.</li>
         <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/DanyCoutinho" target="_blank">Dany Coutinho</a> - Accédez à mon dépôt public dans GitHub et engagez-vous dans mes projets!</li>
-        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a>- Suis-moi sur Instagram.</li>
+        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a>- Suivez-moi sur Instagram.</li>
         <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a>- Inscrivez-vous sur ma chaîne YouTube.</li>
-        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Suis-moi sur Twitter.</li>
-        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a>- Suis-moi sur Facebook.</li>
+        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Suivez-moi sur Twitter.</li>
+        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a>- Suivez-moi sur Facebook.</li>
     </ul>
 </body>
 </html>
