--- a/index.html
+++ b/index.html
@@ -21,9 +21,28 @@
         Fora do trabalho dedico tempo à minha formação contínua e ao desenvolvimento web e programação!
     </p>
     <hr>
-    <h2>Sobre mim</h2>
-    Brevemente disponível!
+    <!-- FUTURAMENTE-->
+    <!-- <h2>Os meus serviços</h2>
     <ul>
+        <li>
+            <a href="">Apoio técnico</a>
+        </li>
+        <li>
+            <a href="">Desenvolvimento Web</a>
+        </li>
+        <li>
+            <a href="">Programação</a>
+        </li>
+    </ul>
+    <hr> -->
+    <h2>Sobre mim</h2>
+    <ul>
+        <li>
+            <a href="docs/CV-Europass-20200526-Coutinho-PT.pdf" download="CV-Europass-20200526-Coutinho-PT.pdf" type="application/pdf">Baixe o meu <strong>Curriculum Vitae</strong></a>
+        </li>
+        <p>
+            <strong>Brevemente disponível!</strong>
+        </p>
         <li>
             <a href="">Percurso Educacional</a>
         </li>
@@ -37,10 +56,10 @@
     <ul>
         <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Adiciona-me no LinkedIn.</li>
         <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/DanyCoutinho" target="_blank">Dany Coutinho</a> - Acede ao meu repositório público no GitHub e envolve-te nos meus projetos.</li>
-        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a>- Segue-me no Instagram.</li>
-        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a>- Inscreve-te no meu canal YouTube.</li>
-        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Segue-me no Twitter.</li>
-        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a>- Segue-me no Facebook.</li>
+        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a> - Segue-me no Instagram.</li>
+        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a> - Inscreve-te no meu canal YouTube.</li>
+        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a> - Segue-me no Twitter.</li>
+        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a> - Segue-me no Facebook.</li>
     </ul>
 </body>
 </html>
