--- a/indexen.html
+++ b/indexen.html
@@ -22,8 +22,13 @@
     </p>
     <hr>
     <h2>About me</h2>
-    Shortly be available!
     <ul>
+        <li>
+            <a href="docs/CV-Europass-20200526-Coutinho-EN.pdf" download="CV-Europass-20200526-Coutinho-EN.pdf" type="application/pdf">Download my <strong>Curriculum Vitae</strong></a>
+        </li>
+        <p>
+            <strong>Shortly be available!</strong>
+        </p>
         <li>
             <a href="">Educational path</a>
         </li>
@@ -37,10 +42,10 @@
     <ul>
         <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Add me on LinkedIn.</li>
         <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/DanyCoutinho" target="_blank">Dany Coutinho</a> - Access my public repository on GitHub and get involved in my projects.</li>
-        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a>- Follow me on Instagram.</li>
-        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a>- Subscribe to my YouTube channel.</li>
-        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Follow me on Twitter.</li>
-        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a>- Follow me on Facebook.</li>
+        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a> - Follow me on Instagram.</li>
+        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a> - Subscribe to my YouTube channel.</li>
+        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a> - Follow me on Twitter.</li>
+        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a> - Follow me on Facebook.</li>
     </ul>
 </body>
 </html>
