--- a/indexfr.html
+++ b/indexfr.html
@@ -22,8 +22,13 @@
     </p>
     <hr>
     <h2>Sur moi</h2>  
-    Bientôt disponible!  
     <ul>
+        <li>
+            <a href="docs/CV-Europass-20200526-Coutinho-FR.pdf" download="CV-Europass-20200526-Coutinho-FR.pdf" type="application/pdf">Téléchargez mon <strong>Curriculum Vitae</strong></a>
+        </li>
+        <p>
+            <strong>Bientôt disponible!</strong>
+        </p>
         <li>
             <a href="">Parcours éducatif</a>
         </li>
@@ -37,10 +42,10 @@
     <ul>
         <li><img src="imgs/icone-linkedin.png" alt="YouTube"><a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank">Dany Coutinho</a> - Ajoutez-moi sur LinkedIn.</li>
         <li><img src="imgs/icone-github.png" alt="GitHub"><a href="https://github.com/DanyCoutinho" target="_blank">Dany Coutinho</a> - Accédez à mon dépôt public dans GitHub et engagez-vous dans mes projets!</li>
-        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a>- Suivez-moi sur Instagram.</li>
-        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a>- Inscrivez-vous sur ma chaîne YouTube.</li>
-        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a>- Suivez-moi sur Twitter.</li>
-        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a>- Suivez-moi sur Facebook.</li>
+        <li><img src="imgs/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/dany.suico/" target="_blank">Dany Coutinho</a> - Suivez-moi sur Instagram.</li>
+        <li><img src="imgs/icone-youtube.png" alt="YouTube"><a href="https://www.youtube.com/channel/UCJFVaSZBv_D3DvNe117Rhbg?view_as=subscriber" target="_blank">Dany Coutinho</a> - Inscrivez-vous sur ma chaîne YouTube.</li>
+        <li><img src="imgs/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/Dany__Coutinho" target="_blank">Dany Coutinho</a> - Suivez-moi sur Twitter.</li>
+        <li><img src="imgs/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/dany.coutinho.93" target="_blank">Dany Coutinho</a> - Suivez-moi sur Facebook.</li>
     </ul>
 </body>
 </html>
