--- a/indexfr.html
+++ b/indexfr.html
@@ -15,7 +15,7 @@
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
     <p>
-        Bonjour, je m'appel Dany Coutinho, je suis technicien en informatique et je travaille actuellement chez Altran pour la Banque Natixis je supervise et je surveille les systèmes informatiques de toute la Banque Natixis.
+        Bonjour, je m'appelle Dany Coutinho, je suis technicien en informatique et je travaille actuellement chez Altran pour la Banque Natixis je supervise et je surveille les systèmes informatiques de toute la Banque Natixis.
     </p>
     <p>
         En dehors de mon travail je consacre mon temps à une formation continue et du développement web et programmation!
