--- a/indexfr.html
+++ b/indexfr.html
@@ -14,6 +14,7 @@
         Bienvenu dans mon monde virtuel devenu réalité!
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
+    <h2>Sur moi</h2> 
     <p>
         Bonjour, je m'appelle Dany Coutinho, je suis technicien en informatique et je travaille actuellement chez Altran pour la Banque Natixis je supervise et je surveille les systèmes informatiques de toute la Banque Natixis.
     </p>
@@ -21,12 +22,12 @@
         En dehors de mon travail je consacre mon temps à une formation continue du développement web et programmation!
     </p>
     <hr>
-    <h2>Sur moi</h2>  
+    <h2>Mon Curriculum Vitae</h2>  
     <ul>
         <li>
             <a href="docs/CV-Europass-20200526-Coutinho-FR.pdf" download="CV-Europass-20200526-Coutinho-FR.pdf" type="application/pdf">Téléchargez mon <strong>Curriculum Vitae</strong></a>
         </li>
-        <p>
+        <!--<p>
             <strong>Bientôt disponible!</strong>
         </p>
         <li>
@@ -34,7 +35,7 @@
         </li>
         <li>
             <a href="">Parcours professionnel</a>
-        </li>
+        </li>-->
     </ul>
     <hr>
     <h2>Contactez-moi!</h2>
