--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         Sejam bem vindos ao meu mundo virtual tornado realidade!
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
+    <h2>Sobre mim</h2>
     <p>
         Olá, eu sou o Dany Coutinho, sou técnico de informática e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos de todo o banco Natixis.
     </p>
@@ -35,12 +36,12 @@
         </li>
     </ul>
     <hr> -->
-    <h2>Sobre mim</h2>
+    <h2>Curriculum Vitae</h2>
     <ul>
         <li>
             <a href="docs/CV-Europass-20200526-Coutinho-PT.pdf" download="CV-Europass-20200526-Coutinho-PT.pdf" type="application/pdf">Baixe o meu <strong>Curriculum Vitae</strong></a>
         </li>
-        <p>
+        <!--<p>
             <strong>Brevemente disponível!</strong>
         </p>
         <li>
@@ -48,7 +49,7 @@
         </li>
         <li>
             <a href="">Percurso Profissional</a>
-        </li>
+        </li>-->
     </ul>
     <hr>
     <h2>Contacte-me!</h2>
