--- a/indexen.html
+++ b/indexen.html
@@ -14,6 +14,7 @@
         Welcome to my virtual world come true!
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
+    <h2>About me</h2>
     <p>
         Hi, I'm Dany Coutinho, I'm a computer technician and at the moment I am working at Altran for Natixis Bank in the supervision of the computer systems of the entire Natixis bank.
     </p>
@@ -21,12 +22,12 @@
         Outside of work I devote time to my ongoing training and to web development and programming!
     </p>
     <hr>
-    <h2>About me</h2>
+    <h2>Curriculum Vitae</h2>
     <ul>
         <li>
             <a href="docs/CV-Europass-20200526-Coutinho-EN.pdf" download="CV-Europass-20200526-Coutinho-EN.pdf" type="application/pdf">Download my <strong>Curriculum Vitae</strong></a>
         </li>
-        <p>
+        <!--<p>
             <strong>Shortly be available!</strong>
         </p>
         <li>
@@ -34,7 +35,7 @@
         </li>
         <li>
             <a href="">Career path</a>
-        </li>
+        </li>-->
     </ul>
     <hr>
     <h2>Contact me!</h2>
