--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button><a href="indexen.html">English</a></button>
     <button><a href="indexfr.html">Français</a></button>
     <p>
-        Sejam bem vindos ao meu mundo virtual tornado realidade!
+        Sejam bem vindos ao meu mundo virtual <!--tornado realidade-->!
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
     <h2>Sobre mim</h2>
