--- a/indexen.html
+++ b/indexen.html
@@ -11,7 +11,7 @@
     <button><a href="indexfr.html">Français</a></button>
     <button><a href="index.html">Português</a></button>
     <p>
-        Welcome to my virtual world come true!
+        Welcome to my virtual world<!-- come true -->!
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
     <h2>About me</h2>
