--- a/indexfr.html
+++ b/indexfr.html
@@ -11,7 +11,7 @@
     <button><a href="indexen.html">English</a></button>
     <button><a href="index.html">Português</a></button>
     <p>
-        Bienvenu dans mon monde virtuel devenu réalité!
+        Bienvenu dans mon monde virtuel<!-- devenu réalité -->!
     </p>
     <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
     <h2>Sur moi</h2>
