--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
             </p>
             <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
             <p>
-                Olá, eu sou o Dany Coutinho, sou técnico de informática e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos de todo o banco Natixis.
+                Olá, eu sou o Dany Coutinho, sou informático e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos.
             </p>
             <p>
-                Fora do trabalho dedico tempo à minha formação contínua e ao desenvolvimento web e programação!
+                Fora do trabalho dedico tempo à minha formação contínua, desenvolvimento web e programação!
             </p>
         </div>
+
         <hr>
+        
         <!-- FUTURAMENTE-->
         <!-- <h2>Os meus serviços</h2>
         <ul>
@@ -42,7 +44,7 @@
         <h2>Sobre mim</h2>
         <ul>
             <li>
-                <a href="docs/CV-Europass-20200526-Coutinho-PT.pdf" download="CV-Europass-20200526-Coutinho-PT.pdf" type="application/pdf">Baixe o meu <strong>Curriculum Vitae</strong></a>
+                <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank">Baixe o meu <strong>Curriculum Vitae</strong></a>
             </li>
             <p>
                 <strong>Brevemente disponível!</strong>
