--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>
                 Sejam bem vindos ao meu mundo virtual tornado realidade!
             </p>
-            <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
+            <img src="imgs/FotoPerfilWeb.png" alt="Foto de Perfil">
             <p>
                 Olá, eu sou o Dany Coutinho, sou informático e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos.
             </p>
