--- a/indexen.html
+++ b/indexen.html
@@ -16,7 +16,7 @@
             <p>
                 Welcome to my virtual world come true!
             </p>
-            <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
+            <img src="imgs/FotoPerfilWeb.png" alt="Foto de Perfil">
             <p>
                 Hi, I'm Dany Coutinho, I'm a computer technician and at the moment I am working at Altran for Natixis Bank in the supervision of the computer systems of the entire Natixis bank.
             </p>
