--- a/indexfr.html
+++ b/indexfr.html
@@ -16,7 +16,7 @@
             <p>
                 Bienvenu dans mon monde virtuel devenu réalité!
             </p>
-            <img src="imgs/LeiaEscolhaControno150.png" alt="Foto de Perfil">
+            <img src="imgs/FotoPerfilWeb.png" alt="Foto de Perfil">
             <p>
                 Bonjour, je m'appelle Dany Coutinho, je suis technicien en informatique et je travaille actuellement chez Altran pour la Banque Natixis je supervise et je surveille les systèmes informatiques de toute la Banque Natixis.
             </p>
