--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
         <!--<div class="first">-->
             <!--<div class="second">-->
                 <h1>Dany Coutinho</h1>
-                <hr>
+                <!-- <hr> -->
                 <button><a href="indexen.html">English</a></button>
                 <button><a href="indexfr.html">Français</a></button>
+
                 <p>
                     Sejam bem vindos ao meu mundo virtual tornado realidade!
                 </p>
+
+                <div id="photo">
                 <img src="imgs/FotoPerfilWeb.png" alt="Foto de Perfil">
+
                 <p>
                     Olá, eu sou o Dany Coutinho, sou informático e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos.
                 </p>
                 <p>
                     Fora do trabalho dedico tempo à minha formação contínua, desenvolvimento web e programação!
                 </p>
+            </div>
             <!--</div>-->
     
             <hr>
@@ -45,7 +50,7 @@
             <h2>Sobre mim</h2>
             <ul>
                 <li>
-                    <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank">Baixe o meu <strong>Curriculum Vitae</strong></a>
+                    <a id=download href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank">Baixe o meu <strong>Curriculum Vitae</strong></a>
                 </li>
                 <p>
                     <strong>Brevemente disponível!</strong>
