--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                     Olá, eu sou o Dany Coutinho, sou informático e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos. Fora do trabalho dedico tempo à minha formação contínua, desenvolvimento web e programação!
                 </p>
             </article>
-
+            
             <article class="percurso">
                 <h3>
-                    Percurso Educacional
+                    Percurso Escolar
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet dicta minus repellat vel earum omnis! Blanditiis iure autem odit aut possimus? Soluta amet, doloremque iste assumenda harum voluptatibus magnam.
+                    Tendo eu outra visão e outras ambições, a partir de 2009 optei pela educação mais técnica e especializada mudando assim o rumo da minha vida continuando a aprender até hoje como poderão verificar no meu <a href="https://github.com/DanyCoutinho">GitHub</a>.
                 </p>
             </article>
 
@@ -58,7 +58,7 @@
                     Percurso Profissional
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet dicta minus repellat vel earum omnis! Blanditiis iure autem odit aut possimus? Soluta amet, doloremque iste assumenda harum voluptatibus magnam.
+                    Durante o meu caminho profissional passei por várias áreas que me fizeram adquirir capacidades técnicas, facilidades em me adaptar, resistência à pressão, frustração e inteligência emocional, a evolução é constante.
                 </p>
             </article>
 
@@ -78,7 +78,7 @@
                     Apoio Técnico
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    Tenho mais de 10 anos de experiência no apoio técnico tanto presencial como à distância, desde a formatação e configuração dos vários sistemas operativos como também instalação de programas pedidos, tudo é possível. 
                 </p>
             </article>
 
@@ -87,7 +87,7 @@
                     Desenvolvimento Web
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    Tenho mais experiência no Front-End mas venho adquirindo cada vez mais experiência no Back-End para me tornar num Full Stack Web Developer e atender todas as necessidades dos meus clientes evitando assim terceirizar os serviços.
                 </p>
             </article>
 
@@ -96,7 +96,7 @@
                     Programação
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    A minha experiência em programação passou por várias linguagens, desde os tempos de escola até agora, neste momento vou praticando desenvolvendo projetos pessoais que poderão acompanhar no meu <a href="https://github.com/DanyCoutinho">GitHub</a>.
                 </p>
             </article>
         </section>
