--- a/indexen.html
+++ b/indexen.html
@@ -46,10 +46,10 @@
 
             <article class="percurso">
                 <h3>
-                    Educational path
+                    School Career
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet dicta minus repellat vel earum omnis! Blanditiis iure autem odit aut possimus? Soluta amet, doloremque iste assumenda harum voluptatibus magnam.
+                    Having another vision and other ambitions, from 2009 I opted for more technical and specialized education, thus changing the course of my life continuing to learn until today as you can see in my <a href="https://github.com/DanyCoutinho">GitHub</a>.
                 </p>
             </article>
 
@@ -58,7 +58,7 @@
                     Career path
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet dicta minus repellat vel earum omnis! Blanditiis iure autem odit aut possimus? Soluta amet, doloremque iste assumenda harum voluptatibus magnam.
+                    During my professional path I went through several areas that made me acquire technical skills, facilities to adapt, resistance to pressure, frustration and emotional intelligence, the evolution is constant.
                 </p>
             </article>
 
@@ -66,7 +66,7 @@
                 Do you want to know more?
             </h3>
             <p id="download">
-                <a href="docs/CV-Dany-Coutinho-EN.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank"><strong>Download my Curriculum Vitae</strong></a>
+                <a href="docs/CV-Dany-Coutinho-EN.pdf" download="CV-Dany-Coutinho-EN.pdf" type="application/pdf" target="_blank"><strong>Download my Curriculum Vitae</strong></a>
             </p>
 
             <h2>
@@ -78,7 +78,7 @@
                     Technical Support
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    I have more than 10 years of experience in technical support both in person and at distance, from formatting and configuration of the various operating systems as well as installation of requested programs, anything is possible.
                 </p>
             </article>
 
@@ -87,7 +87,7 @@
                     Web Development
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    I have more experience in the Front-End but have been acquiring more and more experience in the Back-End to become a Full Stack Web Developer and meet all the needs of my customers thus avoiding outsourcing the services.
                 </p>
             </article>
 
@@ -96,7 +96,7 @@
                     Programming
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    My experience in programming has gone through several languages, from school to now, at this time I am practicing developing personal projects that you can follow on my <a href="https://github.com/DanyCoutinho">GitHub</a>.
                 </p>
             </article>
         </section>
