--- a/indexfr.html
+++ b/indexfr.html
@@ -46,10 +46,10 @@
 
             <article class="percurso">
                 <h3>
-                    Parcours Éducatif
+                    Parcours Scolaire
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet dicta minus repellat vel earum omnis! Blanditiis iure autem odit aut possimus? Soluta amet, doloremque iste assumenda harum voluptatibus magnam.
+                    Ayant une autre vision et d’autres ambitions, à partir de 2009, j’ai opté pour l’éducation plus technique et spécialisée, changeant ainsi le cours de ma vie en continuant d’apprendre jusqu’à aujourd’hui comment vous pouvez vérifier sur mon <a href="https://github.com/DanyCoutinho">GitHub</a>.
                 </p>
             </article>
 
@@ -58,7 +58,7 @@
                     Parcours Professionnel
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet dicta minus repellat vel earum omnis! Blanditiis iure autem odit aut possimus? Soluta amet, doloremque iste assumenda harum voluptatibus magnam.
+                    Pendant mon parcours professionnel, j’ai parcouru plusieurs domaines qui m’ont fait acquérir des compétences techniques, des facilités pour m’adapter, une résistance à la pression, la frustration et l’intelligence émotionnelle, l’évolution est constante.
                 </p>
             </article>
 
@@ -66,7 +66,7 @@
                 Voulez-vous en savoir plus?
             </h3>
             <p id="download">
-                <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank"><strong>Téléchargez mon Curriculum Vitae</strong></a>
+                <a href="docs/CV-Dany-Coutinho-FR.pdf" download="CV-Dany-Coutinho-FR.pdf" type="application/pdf" target="_blank"><strong>Téléchargez mon Curriculum Vitae</strong></a>
             </p>
 
             <h2>
@@ -75,10 +75,10 @@
 
             <article class="services">
                 <h3>
-                    Assistence Technique
+                    Support Technique
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    J’ai plus de 10 ans d’expérience dans l’assistance technique tant en personne qu’à distance, depuis le formatage et la configuration des différents systèmes d’exploitation ainsi que l’installation des programmes demandés, tout est possible.
                 </p>
             </article>
 
@@ -87,7 +87,7 @@
                     Développement Web
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    J’ai plus d’expérience dans le Front-End mais j’ai acquis de plus en plus d’expérience dans le Back-End pour devenir un développeur Web Full Stack et répondre à tous les besoins de mes clients en évitant ainsi d’externaliser les services.
                 </p>
             </article>
 
@@ -96,7 +96,7 @@
                     Programmation
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur labore praesentium temporibus, recusandae cupiditate quia ex vitae alias, dolores molestiae sed ducimus culpa provident aut non illo accusantium, esse distinctio.
+                    Mon expérience de la programmation a traversé plusieurs langages, de l’école à aujourd’hui, je m’entraîne actuellement à développer des projets personnels qui pourront suivre sur mon <a href="https://github.com/DanyCoutinho">GitHub</a>.
                 </p>
             </article>
         </section>
