--- a/indexen.html
+++ b/indexen.html
@@ -106,11 +106,11 @@
         <nav id="footermenu">
             <a href="https://www.instagram.com/dany.suico/" target="_blank"><img src="imgs/icosocialmedia/logo_instagram_icon.png" alt="Instagram"></a>
 
-            <a href="https://www.facebook.com/dany.coutinho.93" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
+            <a href="https://www.facebook.com/odanycoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_facebook_icon.png" alt="Facebook">
 
             <a href="https://github.com/DanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_github_icon.png" alt="GitHub"></a>
                 
-            <a href="https://twitter.com/Dany__Coutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
+            <a href="https://twitter.com/ODanyCoutinho" target="_blank"><img src="imgs/icosocialmedia/logo_twitter_bird_icon.png" alt="Twitter"></a>
 
             <a href="https://www.linkedin.com/in/DanyCoutinho/" target="_blank"><img src="imgs/icosocialmedia/logo_linkedin_icon.png" alt="LinkedIn"></a>
 
