--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                     Sobre mim
                 </h2>
 
-                <img class="imgcenter" src="imgs/FotoPerfilWeb.png" alt="Foto de Perfil">
+                <picture>
+                    <source class="smallimgcenter" media="(max-width: 600px)" srcset="imgs/FotoPerfilWeb.png">
+                    <img class="bigimgcenter" src="imgs/FotoPerfil.png" alt="Foto de Perfil Dany Coutinho">
+                </picture>
 
                 <p>
                     Olá, eu sou o Dany Coutinho, sou informático e neste momento trabalho na Altran para o Banco Natixis na supervisão dos sistemas informáticos. Fora do trabalho dedico tempo à minha formação contínua, desenvolvimento web e programação!
