--- a/indexen.html
+++ b/indexen.html
@@ -37,7 +37,10 @@
                     About me
                 </h2>
 
-                <img class="imgcenter" src="imgs/FotoPerfilWeb.png" alt="Foto de Perfil">
+                <picture>
+                    <source class="smallimgcenter" media="(max-width: 600px)" srcset="imgs/FotoPerfilWeb.png">
+                    <img class="bigimgcenter" src="imgs/FotoPerfil.png" alt="Foto de Perfil Dany Coutinho">
+                </picture>
 
                 <p>
                     Hi, I'm Dany Coutinho, I'm a computer technician and at the moment I am working at Altran Capgemini for Natixis Bank in the supervision of the computer systems of the entire Natixis bank. Outside of work I devote time to my ongoing training and to web development and programming!
