--- a/indexfr.html
+++ b/indexfr.html
@@ -37,7 +37,10 @@
                     Sur moi
                 </h2>
 
-                <img class="imgcenter" src="imgs/FotoPerfilWeb.png" alt="Foto de Perfil">
+                <picture>
+                    <source class="smallimgcenter" media="(max-width: 600px)" srcset="imgs/FotoPerfilWeb.png">
+                    <img class="bigimgcenter" src="imgs/FotoPerfil.png" alt="Foto de Perfil Dany Coutinho">
+                </picture>
 
                 <p>
                     Bonjour, je m'appelle Dany Coutinho, je suis technicien en informatique et je travaille actuellement chez Altran Capgemini pour la Banque Natixis je supervise et je surveille les systèmes informatiques de toute la Banque Natixis. En dehors de mon travail je consacre mon temps à une formation continue du développement web et programmation!
