--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
             Dany Coutinho
         </h1>
 
+        <p id="destaque">
+            Um informático completo para atender a todos os seus pedidos sem terceirizar serviços
+        </p>
+
         <nav id="menuprincipal">
             <a href="#">Sobre mim</a>
-            <a href="#">Percurso Educacional</a>
+            <a href="#">Percurso Escolar</a>
             <a href="#">Percurso Profissional</a>
             <a href="#">Serviços</a>
         </nav>
@@ -38,8 +42,11 @@
                 </h2>
 
                 <picture>
-                    <source class="smallimgcenter" media="(max-width: 600px)" srcset="imgs/FotoPerfilWeb.png">
-                    <img class="bigimgcenter" src="imgs/FotoPerfil.png" alt="Foto de Perfil Dany Coutinho">
+                    <source class="smallimgcenter" media="(max-width: 500px)" srcset="imgs/FotoPerfilCirculoP.png">
+
+                    <source class="mediumimgcenter" media="(max-width: 800px)" srcset="imgs/FotoPerfilCirculoM.png">
+
+                    <img class="bigimgcenter" src="imgs/FotoPerfilCirculoG.png" alt="Foto de Perfil Dany Coutinho">
                 </picture>
 
                 <p>
@@ -104,6 +111,10 @@
                 </p>
             </article>
         </section>
+
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/e4y_rUbPqLs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </main>
 
     <footer>
