--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 Quer saber mais?
             </h3>
 
-            <p id="download">
-                <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank"><strong>Faça download do meu Curriculum Vitae</strong></a>
-            </p>
+                <p id="download">
+                    <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Faça download do meu Curriculum Vitae</strong></a>
+                </p>
 
             <h2>
                 Os meus serviços
