--- a/indexen.html
+++ b/indexen.html
@@ -22,6 +22,10 @@
             Dany Coutinho
         </h1>
 
+        <p id="destaque">
+            A complete IT to fulfill all your orders without outsourcing services
+        </p>
+
         <nav id="menuprincipal">
             <a href="#">About me</a>
             <a href="#">Educational path</a>
