--- a/indexfr.html
+++ b/indexfr.html
@@ -22,6 +22,10 @@
             Dany Coutinho
         </h1>
 
+        <p id="destaque">
+            Un informaticien complet pour répondre à toutes vos demandes sans externaliser les services
+        </p>
+
         <nav id="menuprincipal">
             <a href="#">Sur moi</a>
             <a href="#">Parcours Éducatif</a>
