--- a/indexen.html
+++ b/indexen.html
@@ -42,8 +42,11 @@
                 </h2>
 
                 <picture>
-                    <source class="smallimgcenter" media="(max-width: 600px)" srcset="imgs/FotoPerfilWeb.png">
-                    <img class="bigimgcenter" src="imgs/FotoPerfil.png" alt="Foto de Perfil Dany Coutinho">
+                    <source class="smallimgcenter" media="(max-width: 400px)" srcset="imgs/FotoPerfilCirculoP.png">
+
+                    <source class="mediumimgcenter" media="(max-width: 800px)" srcset="imgs/FotoPerfilCirculoM.png">
+
+                    <img class="bigimgcenter" src="imgs/FotoPerfilCirculoG.png" alt="Foto de Perfil Dany Coutinho">
                 </picture>
 
                 <p>
@@ -74,7 +77,7 @@
             </h3>
             
             <p id="download">
-                <a href="docs/CV-Dany-Coutinho-EN.pdf" download="CV-Dany-Coutinho-EN.pdf" type="application/pdf" target="_blank"><strong>Download my Curriculum Vitae</strong></a>
+                <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Download my Curriculum Vitae</strong></a>
             </p>
 
             <h2>
