--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
         <div class="video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/e4y_rUbPqLs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+
+        <div class="video">
+            <iframe src="https://player.twitch.tv/?channel=keyllanxd&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        </div>
+
+        <iframe
+            id="chat_embed"
+            src="https://www.twitch.tv/embed/keyllanxd/chat?parent=www.example.com"
+            height="500"
+            width="350">
+        </iframe>
     </main>
 
     <footer>
@@ -137,6 +148,8 @@
         </nav>
 
         <p class="footer">Desenvolvido por Dany Coutinho</p>
+
+        <a href="https://br.freepik.com/vetores/tecnologia">Tecnologia vetor criado por starline - br.freepik.com</a>
     </footer>
 </body>
 </html>
