--- a/index.html
+++ b/index.html
@@ -76,9 +76,20 @@
                 Quer saber mais?
             </h3>
 
-                <p id="download">
-                    <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Faça download do meu Curriculum Vitae</strong></a>
-                </p>
+                <nav id="downloadmenu">
+                    <p class="download">
+                        Certificados
+                    </p>
+
+                    <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Curriculum Vitae</strong></a></li>
+
+                    <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>TIC</strong></a></li>
+
+                    <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Programação de Sistemas Informáticos</strong></a></li>
+
+                    <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Multimédia</strong></a></li>
+                </nav>
+                
 
             <h2>
                 Os meus serviços
@@ -116,7 +127,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/e4y_rUbPqLs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
-        <div class="video">
+        <!--<div class="video">
             <iframe src="https://player.twitch.tv/?channel=keyllanxd&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
 
@@ -125,7 +136,7 @@
             src="https://www.twitch.tv/embed/keyllanxd/chat?parent=www.example.com"
             height="500"
             width="350">
-        </iframe>
+        </iframe>-->
     </main>
 
     <footer>
