--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
                     <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Curriculum Vitae</strong></a></li>
 
-                    <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>TIC</strong></a></li>
+                    <li class="downloadlist"><a href="docs/Diploma_TIC_2004.pdf" download="Diploma_TIC_2004.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>TIC</strong></a></li>
 
-                    <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Programação de Sistemas Informáticos</strong></a></li>
+                    <li class="downloadlist"><a href="docs/Diploma_EPI-PSI09.pdf" download="Diploma_EPI-PSI09.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Programação de Sistemas Informáticos</strong></a></li>
 
-                    <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Multimédia</strong></a></li>
+                    <li class="downloadlist"><a href="docs/Diploma_ISLA.pdf" download="Diploma_ISLA.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Multimédia</strong></a></li>
                 </nav>
                 
 
