--- a/indexfr.html
+++ b/indexfr.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
+    <link rel="icon" type="imagem/png" href="imgs/Favicon.png" />
     <title>Dany Coutinho</title>
 </head>
 
-<nav id="languagemenu">
-    <div class="language">
-        <p class="lang">Language</p>
-        <a href="indexen.html">English</a>
-        <a href="index.html">Português</a>
-    </div>
-</nav>
-
 <body>
     <header>
+        <nav id="languagemenu">
+            <div class="language">
+                <p class="lang">Language</p>
+                <a href="indexen.html">English</a>
+                <a href="index.html">Português</a>
+            </div>
+        </nav>
+
         <h1>
             Dany Coutinho
         </h1>
@@ -75,11 +76,21 @@
             <h3>
                 Voulez-vous en savoir plus?
             </h3>
-            
-            <p id="download">
-                <a href="docs/CV-Dany-Coutinho-PT.pdf" download="CV-Dany-Coutinho-PT.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Téléchargez mon Curriculum Vitae</strong></a>
-            </p>
 
+            <nav id="downloadmenu">
+                <p class="download">
+                    Certificats
+                </p>
+
+                <li class="downloadlist"><a href="docs/CV-Dany-Coutinho-FR.pdf" download="CV-Dany-Coutinho-FR.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Curriculum Vitae</strong></a></li>
+
+                <li class="downloadlist"><a href="docs/Diploma_TIC_2004.pdf" download="Diploma_TIC_2004.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>TIC</strong></a></li>
+
+                <li class="downloadlist"><a href="docs/Diploma_EPI-PSI09.pdf" download="Diploma_EPI-PSI09.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Programmation de systèmes informatiques</strong></a></li>
+
+                <li class="downloadlist"><a href="docs/Diploma_ISLA.pdf" download="Diploma_ISLA.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Multimédia</strong></a></li>
+            </nav>
+        
             <h2>
                 Mes Services
             </h2>
@@ -111,6 +122,21 @@
                 </p>
             </article>
         </section>
+
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/e4y_rUbPqLs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <!--<div class="video">
+            <iframe src="https://player.twitch.tv/?channel=keyllanxd&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        </div>
+
+        <iframe
+            id="chat_embed"
+            src="https://www.twitch.tv/embed/keyllanxd/chat?parent=www.example.com"
+            height="500"
+            width="350">
+        </iframe>-->
     </main>
 
     <footer>
@@ -133,6 +159,8 @@
         </nav>
 
         <p class="footer">Développé par Dany Coutinho</p>
+
+        <a href="https://br.freepik.com/vetores/tecnologia">Tecnologia vetor criado por starline - br.freepik.com</a>
     </footer>
 </body>
 </html>
