--- a/indexen.html
+++ b/indexen.html
@@ -28,10 +28,10 @@
         </p>
 
         <nav id="menuprincipal">
-            <a href="#">About me</a>
-            <a href="#">Educational path</a>
-            <a href="#">Career path</a>
-            <a href="#">Services</a>
+            <a href="#sobremim">About me</a>
+            <a href="#percursoescolar">Educational path</a>
+            <a href="#percursoprofissional">Career path</a>
+            <a href="#services">Services</a>
         </nav>
     </header>
 
@@ -55,7 +55,7 @@
                 </p>
             </article>
 
-            <article class="percurso">
+            <article id="percursoescolar">
                 <h3>
                     School Career
                 </h3>
@@ -64,7 +64,7 @@
                 </p>
             </article>
 
-            <article class="percurso">
+            <article id="percursoprofissional">
                 <h3>
                     Career path
                 </h3>
@@ -91,11 +91,11 @@
                 <li class="downloadlist"><a href="docs/Diploma_ISLA.pdf" download="Diploma_ISLA.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Multimedia</strong></a></li>
             </nav>
 
-            <h2>
-                My services
-            </h2>
-
-            <article class="services">
+            <article id="services">
+                <h2>
+                    My services
+                </h2>
+                
                 <h3>
                     Technical Support
                 </h3>
