--- a/indexfr.html
+++ b/indexfr.html
@@ -28,10 +28,10 @@
         </p>
 
         <nav id="menuprincipal">
-            <a href="#">Sur moi</a>
-            <a href="#">Parcours Éducatif</a>
-            <a href="#">Parcours Professionnel</a>
-            <a href="#">Services</a>
+            <a href="#sobremim">Sur moi</a>
+            <a href="#percursoescolar">Parcours Éducatif</a>
+            <a href="#percursoprofissional">Parcours Professionnel</a>
+            <a href="#services">Services</a>
         </nav>
     </header>
 
@@ -55,7 +55,7 @@
                 </p>
             </article>
 
-            <article class="percurso">
+            <article id="percursoescolar">
                 <h3>
                     Parcours Scolaire
                 </h3>
@@ -64,7 +64,7 @@
                 </p>
             </article>
 
-            <article class="percurso">
+            <article id="percursoprofissional">
                 <h3>
                     Parcours Professionnel
                 </h3>
@@ -90,12 +90,12 @@
 
                 <li class="downloadlist"><a href="docs/Diploma_ISLA.pdf" download="Diploma_ISLA.pdf" type="application/pdf" target="_blank" class="downloadbutton"><strong>Multimédia</strong></a></li>
             </nav>
-        
-            <h2>
-                Mes Services
-            </h2>
 
-            <article class="services">
+            <article id="services">
+                <h2>
+                    Mes Services
+                </h2>
+                
                 <h3>
                     Support Technique
                 </h3>
